# llm_snake_bots

./: .gitignore  README.md
backend/: Cargo.toml  Dockerfile  IMPLEMENTATION.md  README.md  docker-compose.yml  game.prompt  run.sh
backend/gui/: Cargo.toml
backend/gui/src/: canvas.rs  lib.rs  types.rs  ui.rs
backend/src/: constants.rs  docs.rs  game.rs  main.rs  server.rs  types.rs
backend/static/: api-docs.html  index.html  swagger-ui.html
invite/: invite.prompt  snake_bot_invitation.html
