[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Async utilities
tokio-stream = "0.1"
async-stream = "0.3"

# Random number generation
rand = { version = "0.8", features = ["std_rng"] }

# UUID for player identification
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time utilities
tokio-util = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI documentation
utoipa = { version = "4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Collections
indexmap = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"