[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM and web
wasm-bindgen = "0.2"
js-sys = "0.3"

# Async
wasm-bindgen-futures = "0.4"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# WebSocket
gloo = { version = "0.11", features = ["futures"] }

# Console logging
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

# UUID with WASM support
uuid = { version = "1.0", features = ["v4", "serde", "wasm-bindgen"] }

# Web APIs
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Window",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "ErrorEvent",
  "Event",
  "EventTarget",
  "HtmlButtonElement",
  "MouseEvent",
  "KeyboardEvent",
  "HtmlInputElement",
  "HtmlDivElement",
  "HtmlSpanElement",
  "CssStyleDeclaration",
  "Location",
] }

[dependencies.gloo-net]
version = "0.5"
features = ["websocket"]

[profile.release]
opt-level = "s"
lto = true
debug = false